--- a/src/qt/forms/modaloverlay.ui
+++ b/src/qt/forms/modaloverlay.ui
@@ -130,7 +130,13 @@ QLabel { color: rgb(40,40,40);  }</string>
              <item>
               <widget class="QLabel" name="infoText">
                <property name="text">
-                <string>Recent transactions may not yet be visible, and therefore your wallet's balance might be incorrect. This information will be correct once your wallet has finished synchronizing with the ScashX network, as detailed below.</string>
+               <string>
+                <![CDATA[
+                Please wait while syncing with the ScashX network. Progress is shown in the status bar.<br><br>
+                Recent transactions may not yet be visible, and therefore your wallet's balance might be incorrect.
+                This information will be correct once your wallet has finished synchronizing with the ScashX network, as detailed below.<br>
+                ]]>
+               </string>
                </property>
                <property name="textFormat">
                 <enum>Qt::RichText</enum>
