scash fork + gui rebrand

--- a/src/qt/forms/modaloverlay.ui
+++ b/src/qt/forms/modaloverlay.ui
@@ -132,9 +132,9 @@ QLabel { color: rgb(40,40,40);  }</string>
                <property name="text">
                <string>
                 <![CDATA[
-                Please wait while syncing with the ScashX network. Progress is shown in the status bar.<br><br>
+                Please wait while syncing with the Snailcoin network. Progress is shown in the status bar.<br><br>
                 Recent transactions may not yet be visible, and therefore your wallet's balance might be incorrect.
-                This information will be correct once your wallet has finished synchronizing with the ScashX network, as detailed below.<br>
+                This information will be correct once your wallet has finished synchronizing with the Snailcoin network, as detailed below.<br>
                 ]]>
                </string>
                </property>
@@ -155,7 +155,7 @@ QLabel { color: rgb(40,40,40);  }</string>
                 </font>
                </property>
                <property name="text">
-                <string>Attempting to spend SCASHX that are affected by not-yet-displayed transactions will not be accepted by the network.</string>
+                <string>Attempting to spend SNAILCOIN that are affected by not-yet-displayed transactions will not be accepted by the network.</string>
                </property>
                <property name="textFormat">
                 <enum>Qt::RichText</enum>
