--- a/src/qt/forms/optionsdialog.ui
+++ b/src/qt/forms/optionsdialog.ui
@@ -789,8 +789,8 @@
          <item>
           <widget class="QLabel" name="moneyFont_preview">
            <property name="text">
-            <string notr="true">111.11111111 SCASHX
-909.09090909 SCASHX</string>
+            <string notr="true">111.11111111 SNAILCOIN
+909.09090909 SNAILCOIN</string>
            </property>
           </widget>
          </item>
